--- a/Ausarbeitung/Ausarbeitung.bib
+++ b/Ausarbeitung/Ausarbeitung.bib
@@ -16,6 +16,41 @@
   note = {\url{https://sites.math.washington.edu/~morrow/336_09/papers/Yevgeny.pdf},
    visited 2023-03-02}
 }
-
+@article{TTheRSAAlgorithm,
+  author = {{Busse Michael, Schmitt Matthias, Steeg Jörge}},
+  title = {Der RSA-Algorithmus},
+  year = {1999},
+  month = April,
+  organization = {InfoSchul},
+  note = {\url{https://www.zum.de/Faecher/Inf/RP/infschul/kr_rsa.html},
+    visited 2023-03-02}
+}
+@unpublished{Carmicael,
+  author = {{unknow}},
+  title = {Main purpose for Carmichael's Function in RSA},
+  year = {2018},
+  month = unknow,
+  organization = {CryptoGraphy},
+  note = {\url{https://crypto.stackexchange.com/questions/54280/main-purpose-for-carmichaels-function-in-rsa#:~:text=As%20we%20know%2C%20the%20original,%E2%89%A11(modn).},
+    visited 2023-03-02}
+}
+@article{ExtendedEuclideanAlgorithm,
+  author = {{Thaddeus Ably, ALan Enrique and 12 others}},
+  title = {Extended Euclidean Algorithm},
+  year = {unknow},
+  month = unknow,
+  organization = {Brilliant},
+  note = {\url{https://crypto.stackexchange.com/questions/54280/main-purpose-for-carmichaels-function-in-rsa#:~:text=As%20we%20know%2C%20the%20original,%E2%89%A11(modn).},
+    visited 2023-03-02}
+}
+@unpublished{DefinitionoftextbookRSA,
+  author = {{unknow}},
+  title = {Definition of textbook RSA},
+  year = {2012},
+  month = unknow,
+  organization = {CryptoGraphy},
+  note = {\url{https://crypto.stackexchange.com/questions/1448/definition-of-textbook-rsa},
+    visited 2023-03-02}
+}
 
 
